--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,25 @@
     "description": "Biblioteca de integração com o Bling",
     "type": "library",
     "require": {
+        "php": "^7.1.3",
+        "ext-curl": "*",
+        "lib-curl": "*",
+        "lib-openssl": "*",
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
         "phpdocumentor/phpdocumentor": "^2.9"
+    },
+    "autoload": {
+        "psr-4": {
+            "Bling\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Bling\\Tests\\": "tests/"
+        }
     },
     "license": "MIT",
     "authors": [
