--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "require": {
         "php": "^7.1.3",
         "ext-curl": "*",
+        "ext-json": "*",
         "lib-curl": "*",
         "lib-openssl": "*",
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.5",
-        "phpdocumentor/phpdocumentor": "^2.9"
+        "phpunit/phpunit": "^6.5"
     },
     "autoload": {
         "psr-4": {
