--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,20 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
-        "friendsofphp/php-cs-fixer": "*"
+        "friendsofphp/php-cs-fixer": "*",
+        "squizlabs/php_codesniffer": "3.*"
+
     },
     "scripts": {
-      "cs-fix": [
-          "php-cs-fixer fix src --rules=@PSR2"
-      ]
+        "cs-fix": [
+            "php-cs-fixer fix --using-cache=no --rules=@PSR2 ./src"
+        ],
+        "cs-snif": [
+            "phpcs -p --standard=PSR2 ./src"
+        ],
+        "cs-beauty": [
+            "phpcbf -p --standard=PSR2 ./src"
+        ]
     },
     "autoload": {
         "psr-4": {
